--- a/manifest.json
+++ b/manifest.json
@@ -2,13 +2,13 @@
 "update_url": "https://clients2.google.com/service/update2/crx",
 
     "manifest_version": 3,
-    "name": "Codeforces Freinds Tracker",
+    "name": "Codeforces Friends Tracker",
     "version": "1.0",
     "description": "Get submissions of your friends for a particular Codeforces problem",
     "content_scripts": [
         {   
             "js": ["scripts/content.js", "scripts/popup-script.js"],
-            "matches": ["https://codeforces.com/*"]
+            "matches": ["https://codeforces.com/problemset/problem/*"]
         }
     ],
     "icons": {
