--- a/manifest.json
+++ b/manifest.json
@@ -11,15 +11,16 @@
             "matches": ["https://codeforces.com/problemset/problem/*"]
         }
     ],
-    "icons": {
-        "16": "icon16.png",
-        "32": "icon32.png",
-        "48": "icon48.png",
-        "128": "icon128.png"
-    },
+    
     "action": {
         "default_popup": "popup.html"
     },
-    "permissions": ["storage"]
+    "permissions": ["storage"],
+    "icons": {
+        "16": "resources/icon16.png",
+        "32": "resources/icon32.png",
+        "48": "resources/icon48.png",
+        "128": "resources/icon128.png"
+    }
 
 }
